Fix the alignment of the social headings.

--- a/css/editable-preview.scss
+++ b/css/editable-preview.scss
@@ -9,6 +9,10 @@
 		box-sizing:         border-box;
 	}
 
+	&__heading {
+		margin: 0 0 15px;
+	}
+
 	&__inner {
 		padding: 20px;
 	}
